client/assets/css/responsive.css
/* PC */
@media(min-width: 1024px) {

}

@media(min-width: 1024) and (max-width: 1220px) {

}

/* Mobile to PC low */
@media(max-width: 1023px) {
    .header-navbar {
        height: 80px;
        justify-content: center;
    }

    .navbar-search {
        margin: 0 auto;
        width: auto;
        border: none;
        align-items: center;
    }
    
    .navbar-search_type {
        display: none;
    }
    
    .navbar-search > i {
        padding: 0;
        color: var(--text-color);
    }

    .navbar-search > i:hover {
        font-size: 1.6rem;
        color: var(--primary-color-low);
    }

    
}

/* Tablet to PC */
@media(min-width: 740px) {

}

/* Tablet to PC low */
@media(min-width: 740px) and (max-width: 1023px) {
    
}

/* Big mobile */
@media(min-width:501px) and (max-width: 739px) {
    
    .post_by-category_description > p,
    .post-pin_description > p {
        -webkit-line-clamp: 1;
    }
}

/* Mobile to big Mobile */
@media(max-width: 739px) {

    .navbar-user_icon-down,
    .navbar-user_name {
        display: none;
    }

    .navbar-user_box {
        left: initial;
        right: 0;
        margin-right: auto;
    }

    /* body */
    .content-title {
        margin-top: 40px;
    }

    .content-post_new {
        transform: none;
        transition: none;
    }

    .content-post_new:hover {
        transform: none;
    }

    .content-post_title {
        padding-bottom: 10px;
    }

    .content-post_description {
        display: block;
        padding-bottom: 10px;
        font-size: 1.2rem;
    }

    .post_by-category_title,
    .post-pin_title {
        padding: 6px 0;
        margin-bottom: auto;
    }

    .post_by-category_link,
    .post-pin_link {
        font-size: 1.6rem;
    }

    .post_by-category_auth > img,
    .post-pin_auth > img {
        width: 24px;
        height: 24px;
    }

    /* footer */
    .footer-body {
        flex-direction: column;
    }

    .footer-description {
        padding: 20px 0;
    }
    
    .footer-copyright {
        text-align: center;
    }
}

/* Mobile */
@media(max-width: 500px) {
    .header-navbar {
        justify-content: flex-start;
    }

    .navbar_element:nth-child(2),
    .navbar_element:nth-child(3) {
        margin-left: auto;
    }

    .navbar-about {
        display: none;
    }

    .navbar-search > i {
        font-size: 2rem;
    }

    .navbar-search > i:hover {
        font-size: 2.4rem;
    }

    .post_categories,
    .post-pin_categories {
        font-size: 1rem;
    }

    .post_by-category_description,
    .post-pin_description {
        display: none;
    }

    .post_by-category_image,
    .post-pin_image {
        padding-top: 100%;
    }
    
}

